--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8" />
     <title>撕图</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="jquery.js"></script>
-    <script>
-      $(function() {
-        $('#file').change(function() {
-          $('.myImg').attr('src', window.URL.createObjectURL(this.files[0]))
-        })
-      })
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
   </head>
   <body>
     <div class="header">
       <input id="file" type="file" accept="image/png, image/jpeg" />
       <label for="file">选择图片</label>
     </div>
-
-    <div class="wrapper">
+    <div class="wrapper" id="result">
       <div class="container">
         <img src="src.png" alt="" class="img-responsive back" />
         <div class="left-wrapper">
@@ -32,5 +24,9 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+      <button id="save">保存</button> <a id="download">download</a>
+    </div>
+    <script src="./main.js"></script>
   </body>
 </html>
